@@ -33,6 +33,10 @@
 				<th><label for="numFactories">Number of Factories</label></th>
 				<td><input id="numFactories" type="number" min="1" value="3"></td>
 			</tr>
+			<tr>
+				<th><label for="numDaysOfWar">Number of Days of War</label></th>
+				<td><input id="numDaysOfWar" type="number" min="1" value="21"></td>
+			</tr>
 		</table>
 		<table id="units">
 			<thead>
@@ -44,6 +48,8 @@
 				<tr id="buildCosts"><th>Build Costs</th></tr>
 				<tr id="upkeepCosts"><th>Upkeep Costs</th></tr>
 				<tr id="timeToBuild"><th>Time to build</th></tr>
+				<tr id="fleetLevel"><th>Fleet Level</th></tr>
+				<tr id="gaLevel"><th>GA level</th></tr>
 			</tfoot>
 			<tbody>
 			</tbody>
